<resources>
    <string name="app_name">NNInference</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_go_button">Go</string>
    <string name="welcome_path_models_button">Select models path</string>

    <string name="main_vision_button">Vision</string>

    <string name="vision_list_image_classification_button">Image Classification</string>
    <string name="image_classification_title">Image Classification</string>
    <string name="image_classification_results_header_row_name">Classification</string>
    <string name="image_classification_results_header_row_score">Score</string>


    <string name="welcome_page_title">Welcome</string>
    <string name="welcome_page_description">Neural Network Inference application \n
    Custom version : Load models and collect stats</string>

    <string name="welcome_page_image_classification_title">About</string>
    <string name="welcome_page_image_classification_description">G.Marco Nuzzarello\n Enzo Tartaglione and \n Andrea Bragagnolo\nEIDOSlab @Unito\nVersion 1.4</string>

    <string name="clear">Clear</string>
    <string name="text_classification_topic">Topic</string>
    <string name="text_classification_score">Score</string>
    <string name="error_dialog_text">Sorry there was an error.</string>

    <string name="start_title">START ></string>
    <string name="start_description">Select a model then click START</string>
    <string name="checkbox_text">Collect stats</string>
    <string name="welcome_path_models_buttonn">Select models path</string>
    <string name="default_directory_models"> Models path : /storage/emulated/0/Download/</string>
    <string name="refresh_button"> Refresh</string>


    <string name="vision_card_info_title">Info</string>
    <string name="vision_card_cifar10_description">Input 32x32\n Output on 10 classes</string>
    <string name="vision_card_cifar100_description">Input 32x32\n Output on 100 classes</string>
    <string name="vision_card_imagenet_description">Input 224x224\n Output on 1000 classes</string>
    <string name="vision_card_isic_description">Input 224x224\n Output on 8 classes</string>



</resources>
