<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/path_to_models"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:text="@string/default_directory_models"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/path_models_button"
            style="@style/Button"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_skip_button"
            android:text="@string/welcome_path_models_button"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/refresh_button"
            android:layout_width="47dp"
            android:layout_height="42dp"
            android:layout_gravity="end"
            android:baselineAligned="false"
            android:contentDescription="@string/refresh_button"
            app:srcCompat="@drawable/refresh" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="@dimen/list_content_margin"
        android:backgroundTint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_title_margin_top"
        android:buttonTint="#FFFFFF"
        android:text="@string/checkbox_text"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent" />

    <org.pytorch.demo.ListCardView
        android:id="@+id/start_click_area"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_marginTop="@dimen/list_content_margin"
        android:elevation="1dp"
        app:descriptionRes="@string/start_description"
        app:imageRes="@drawable/ic_image_classification_s"
        app:titleRes="@string/start_title">

    </org.pytorch.demo.ListCardView>

</LinearLayout>